@@ -30,4 +30,4 @@ D/wmlscript////
 /configure.in/1.173/Wed Apr 11 17:06:10 2007//
 /Makefile.in/1.80/Sun Apr 22 11:22:43 2007//
 /aclocal.m4/1.10/Sun Apr 22 11:22:43 2007//
-/ChangeLog/1.2897/Sun Jul 22 12:00:48 2007//
+/ChangeLog/1.2898/Sun Jul 22 12:52:40 2007//
