@@ -25,6 +25,6 @@
 /emimsg.c/1.6/Tue Feb 27 17:43:20 2007//
 /emimsg.h/1.6/Tue Feb 27 17:43:20 2007//
 /smsc_http.c/1.54/Wed Apr 18 08:09:09 2007//
-/smsc_at.c/1.35/Fri Jun  1 11:17:09 2007//
 /smsc_smpp.c/1.101/Thu May 31 08:29:57 2007//
+/smsc_at.c/1.36/Sun Jul 22 12:43:47 2007//
 D
