@@ -1,4 +1,9 @@
 2007-07-22 Alexander Malysh <amalysh at kannel.org>
+   * gw/smsc/smsc_at.c: set reconnecting = 1 if we have issues opening
+     device. So we will sleep reconnect time instead of hammering on
+     maybe not existing device. This should fix #412.
+
+2007-07-22 Alexander Malysh <amalysh at kannel.org>
    * gwlib/mime.c: don't add an extra CRLF to the end of a message part.
      Thanks to Paul Bagyenda <bagyenda at dsmagic.com>.
      [Msg-Id: <F83BC280-AF9A-4347-A255-6FF1A314C525@dsmagic.com>]
